Descripción de los cambios realizados

--- a/src/app/pages/configuracion/configuracion.page.html
+++ b/src/app/pages/configuracion/configuracion.page.html
@@ -3,7 +3,7 @@
     <ion-buttons slot="start">
       <ion-back-button default-href="#"></ion-back-button>
     </ion-buttons>
-    <ion-title>Congifuracion</ion-title>
+    <ion-title>Configuración</ion-title>
     <ion-buttons slot="end">
       <ion-button color="dark">
         <ion-icon slot="icon-only" ios="person-circle-outline" md="person-circle"></ion-icon>
@@ -13,11 +13,4 @@
 </ion-header>
 
 <ion-content>
-  <ion-list-header>Modo dark</ion-list-header>
-  <ion-list [inset]="true">
-    <ion-item>
-      <ion-toggle [(ngModel)]="paletteToggle" (ionChange)="toggleChange($event)" justify="space-between"
-        >Dark Mode</ion-toggle
-      >
-    </ion-item>
-  </ion-list>
+</ion-content>
