--- a/src/app/pages/registro/registro.page.html
+++ b/src/app/pages/registro/registro.page.html
@@ -1,5 +1,8 @@
-<ion-content [fullscreen]="true">
-  <div class="container">
+<ion-header class="ion-no-border">
+</ion-header>
+
+<ion-content class="ion-padding"> <div class="registro-page"></div>
+  <div class="registro-page">
     
     <ion-card class="login-card">
       <ion-item>
@@ -8,7 +11,7 @@
       <ion-item>
         <ion-input [(ngModel)]="password" type="password" placeholder="Contraseña"></ion-input>
       </ion-item>
-      <ion-button expand="full" color="secondary" fill="outline" (click)="registrar()">Registrarse</ion-button>
+      <ion-button expand="full" color="dark" fill="outline" (click)="registrar()">Registrarse</ion-button>
     </ion-card>
     
   </div>
