--- a/src/app/pages/configuracion/configuracion.page.html
+++ b/src/app/pages/configuracion/configuracion.page.html
@@ -3,14 +3,79 @@
     <ion-buttons slot="start">
       <ion-back-button default-href="#"></ion-back-button>
     </ion-buttons>
-    <ion-title>Configuración</ion-title>
+
+    <ion-title class="ion-text-center">Configuración</ion-title>
+
     <ion-buttons slot="end">
-      <ion-button color="dark">
-        <ion-icon slot="icon-only" ios="person-circle-outline" md="person-circle"></ion-icon>
-      </ion-button>
+      <div style="width: 44px;"></div> <!-- Espaciador -->
     </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
+<ion-content class="ion-padding">
+
+  <div style="display: flex; align-items: center; margin-bottom: 20px;">
+    <div style="
+      width: 50px;
+      height: 50px;
+      border-radius: 50%;
+      background-color: #3c3838;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      margin-right: 15px;
+    ">
+      <ion-icon name="person-circle" style="font-size: 32px;"></ion-icon>
+    </div>
+    <div>
+      <h2 style="font-weight: bold; margin: 0;">Limbert Gabriel</h2>
+      <p style="color: #666; margin: 0;">limbert.villcaucb.edu.bo</p>
+    </div>
+  </div>
+
+  <ion-list lines="none">
+    <ion-item>
+      <ion-label>
+        <h3 style="font-weight: bold;">Haz más con Ecochat-Ultimate</h3>
+        <p>Obtener 1 mes gratis</p>
+      </ion-label>
+    </ion-item>
+
+  </ion-list>
+
+  <ion-list lines="none" style="margin-top: 30px;">
+    <ion-item>
+      <ion-label>
+        <h3>Cuenta</h3>
+      </ion-label>
+    </ion-item>
+
+    <ion-item>
+      <ion-label>
+        <h3>Realizar encuesta más reciente</h3>
+      </ion-label>
+    </ion-item>
+
+    <ion-item>
+      <ion-label>
+        <h3>Enviar comentarios</h3>
+      </ion-label>
+    </ion-item>
+
+    <ion-item>
+      <ion-label>
+        <h3>Acerca de</h3>
+      </ion-label>
+    </ion-item>
+
+    <ion-item>
+      <ion-label>
+        <h3 style="color: #d9534f;">Cerrar sesión</h3>
+      </ion-label>
+    </ion-item>
+  </ion-list>
+
+  <div style="text-align: center; margin-top: 40px; color: #666; font-size: 12px;">
+    <p>Privacidad | Condiciones de uso | Preguntas más frecuentes</p>
+  </div>
 </ion-content>
