--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -12,24 +12,35 @@
 /* This sets a different item border color for the default theme on ios and md */
 :root {
   --ion-item-border-color: var(--ion-background-color-step-200);
+  --background-darkz: linear-gradient(to bottom, #0a2f26, #124a35, #1b684a);
+  --background-lightz: linear-gradient(to bottom, #ffffff, #f0fbec, #e0f7d5);
 }
 
 /* This sets a different background and item background for the default theme on ios */
 :root.ios {
-  --ion-background-color: var(--ion-background-color-step-50, #f2f2f6);
+  --ion-background-color: var(--background-lightz);
   --ion-toolbar-background: var(--ion-background-color);
   --ion-item-background: #fff;
 }
 
 /* This sets a different background and item background for the default theme on md */
 :root.md {
-  --ion-background-color: var(--ion-background-color-step-100, #f9f9f9);
+  --ion-background-color: var(--background-lightz);
   --ion-toolbar-background: var(--ion-background-color);
   --ion-item-background: #fff;
+}
+
+:root {
+  --background-dark: linear-gradient(to bottom, #0a2f26, #124a35, #1b684a, #2a9768, #3fbb85);
+  --background-light: linear-gradient(to bottom, #ffffff, #f0fbec, #e0f7d5, #c8f2b8, #aeea96, #8ee16f);
+  --text-dark: white;
+  --text-light: black;
 }
 
 /* This sets a different item background when dark mode is enabled on ios and md */
 .ion-palette-dark.ios,
 .ion-palette-dark.md {
-  --ion-item-background: #1c1c1d;
+  --ion-background-color: var(--background-darkz);
+  --ion-toolbar-background: var(--ion-background-color);
+  --ion-item-background: var(--background-darkz);;
 }
